<resources>
  <string name="app_name">MYB</string>
  <string name="content_description">@string/app_name</string>
  <string name="move_your_butt">MOOVE YOUR BUTT by Sugarman</string>
  <string name="invite_message">Hi friend, I am using this app and I want to build a walking group with you. Check out the app and let me know when you have it downloaded and we will create a fun group to virtually walk together and guard each other! \nhttp://bit.ly/MYBInviteInApp</string>
  <string name="okay">Okay</string>
  <string name="alert_default_title">Oh Snap!</string>
  <string name="no_internet_connection">It looks like you don\'t have internet connection, try to reconnect.</string>
  <string name="update_old_version">You MUST upgrade to continue and enjoy new functionalities</string>
  <string name="need_your_permission">This is action isn\'t available without your permission.</string>
  <string name="step_detector_not_supported">Step detector is not supported on this device</string>
  <string name="group_name_is_empty">Please enter group name</string>
  <string name="members_list_is_empty">In order to create group you need to choose members</string>
  <string name="members_list_need_to_be_more0_less50">In order to create group you need to choose more than 0 and less than 50 members</string>
  <string name="play_with_me">Come play this level with me</string>
  <string name="max_active_groups">Sorry, you can only have up to %1$s active groups</string>
  <string name="this_user_has_completed_daily">This user has completed his daily steps!</string>
  <string name="you_cant_kick_self">You can\'t kick your own ass</string>
  <string name="editing_your_group_is_possible_on_warm_up">Editing your group is possible only on warm up day</string>
  <string name="invite_is_no_available_template">Your invitation to %1$s is no longer available</string>
  <string name="you_cant_kick_pending">Can\'t kick pending users ass</string>
  <string name="you_cant_kick_more_that_self">You can\'t MYB user that walked more steps than you</string>
  <string name="you_cant_kick_foreign_users">You can\'t kick users not from your groups</string>
  <string name="check_facebook">For this action need the native Facebook for Android app installed, version 7.0 or higher</string>
  <string name="update_fb">Update FB</string>
  <string name="cancel">Cancel</string>
  <string name="we_will_never_post_on_your_timeline">We will never post on your timeline</string>
  <string name="terms_of_use">Terms of Use</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="divider">|</string>
  <string name="loading">Loading&#8230;</string>
  <string name="steps_today_caps">STEPS TODAY</string>
  <string name="search_groups">Search to join new groups...</string>
  <string name="invites">Invites</string>
  <string name="requests">Requests</string>
  <string name="high_score">High Score</string>
  <string name="invite_friends">Invite friends</string>
  <string name="settings">Settings</string>
  <string name="log_out">Log Out</string>
  <string name="intro">Tutorial</string>
  <string name="profile_my_stats">My stats</string>
  <string name="tap_to_see">Tap to see what to do next</string>
  <string name="level">LEVEL %1$d</string>
  <string name="menu">Menu</string>
  <string name="skip">Skip</string>
  <string name="move">Move</string>
  <string name="group_that_i_created">Group That I\'ve Created</string>
  <string name="nothig_to_show_yet">Nothing to show yet :(</string>
  <string name="group_that_i_participated">Group That I Participated</string>
  <string name="group_position_template">Your position was %1$d</string>
  <string name="decline">Decline</string>
  <string name="accept">Accept</string>
  <string name="no_invites">No Invites</string>
  <string name="invite_description_template">%1$s has invited you to join %2$s group.</string>
  <string name="invite_description_flag1">has invited you to join</string>
  <string name="invite_description_flag2">group.</string>
  <string name="approve">Approve</string>
  <string name="request_description_template">%1$s has requested to join %2$s group.</string>
  <string name="request_description_flag1">has requested to join</string>
  <string name="request_description_flag2">group.</string>
  <string name="no_requests">No Requests</string>
  <string name="create">Create a Group</string>
  <string name="add">Add</string>
  <string name="remove">Remove</string>
  <string name="photo">Photo</string>
  <string name="create_group_et_hint">Enter Group Name</string>
  <string name="search">Search</string>
  <string name="search_and_invite">Search and invite...</string>
  <string name="add_photo">Add Photo</string>
  <string name="no_friends_found">No friends found</string>
  <string name="group_name_template">%1$s\'s group</string>
  <string name="no_search_group">No Groups</string>
  <string name="available">Available</string>
  <string name="unavailable">Unavailable</string>
  <string name="created_by_template">Created by: %1$s</string>
  <string name="days_ago_template">%1$s days ago</string>
  <string name="join">Join</string>
  <string name="requested">Requested</string>
  <string name="congratulations">Congratulations!</string>
  <string name="congratulations_description_template">Your group %1$s has finished the challenge</string>
  <string name="congratulations_description_flag1">Your group</string>
  <string name="congratulations_description_flag2">has finished the challenge</string>
  <string name="your_the_daily">You\'re the daily</string>
  <string name="sugarman">Sugarman!</string>
  <string name="daily_description_template">You\'re the first from %1$s group to reach 10K Steps</string>
  <string name="daily_description_flag1">You\'re the first from</string>
  <string name="daily_description_flag2">group to reach</string>
  <string name="your_not_the_daily">You\'re not the daily</string>
  <string name="daily_description_template_not">%1$s was the first from %2$s group to reach 10K Steps. Try harder tomorrow!</string>
  <string name="daily_description_flag1_not"> is the first from</string>
  <string name="daily_description_flag2_not">group to reach</string>
  <string name="failed_thanks_to_bears_template">Your group %1$s has failed thanks to these lazy bears</string>
  <string name="failed_thanks_to_bears_left">Your group</string>
  <string name="failed_thanks_to_bears_right">has failed thanks to these lazy bears</string>
  <string name="failed_regroup">Re-Group without laziest</string>
  <string name="all_you_have_to_do_is_walk">All you have to do is walk</string>
  <string name="create_a_group_and_challenge">Create a group and challenge </string>
  <string name="your_friends_to_walk">your friends to walk  </string>
  <string name="ten_k_steps">10K steps</string>
  <string name="per_day">per day  </string>
  <string name="for_21_days">for 21 days</string>
  <string name="steps_per_day_in_21_day">10K steps per day in 21 days</string>
  <string name="tap_on">Tap on&#160;</string>
  <string name="to_create_a_group">&#160;to create a group</string>
  <string name="and_start_a_challenges">and start a challenge</string>
  <string name="tap_on_plus">Tap on + to create a group and start a challenge</string>
  <string name="or_tap_on"> or tap on </string>
  <string name="to_search_for_pending">  to search for pending groups</string>
  <string name="this_challenge_will_start_in">This challenge will start in</string>
  <string name="danger_indicator">DANGER INDICATOR</string>
  <string name="myb">myb</string>
  <string name="good">good</string>
  <string name="the_laziest">THE LAZIEST</string>
  <string name="all">ALL</string>
  <string name="tap_on_photo_to_kick_ass">Tap on photo to kick-ass</string>
  <string name="challenge_day_template">Day %1$d</string>
  <string name="plural_decimal_template">%1$d %2$s</string>
  <string name="plural_string_template">%1$s %2$s</string>
  <string name="timer_template">%1$s:%2$s:%3$s:%4$s</string>
  <string name="warming_up">Warming up</string>
  <string name="yesterday">Yesterday</string>
  <string name="today">Today</string>
  <string name="best">BEST</string>
  <string name="fastest">SUGARMAN</string>
  <string name="laziest">LAZIEST</string>
  <string name="all_heroes">ALL HEROES</string>
  <string name="group_steps_today">Group steps today</string>
  <string name="day">Day</string>
  <string name="users">users</string>
  <string name="sugarman_is">Sugarman is </string>
  <string name="todays_fastest">fastest</string>
  <string name="pending">Pending</string>
  <string name="lazy">Lazy</string>
  <string name="walk">Walking</string>
  <string name="run">Running</string>
  <string name="kicked_user">%1$s\'s ass was kicked</string>
  <string name="edit_group">Edit Group</string>
  <string name="chat_not_available">Chat is not available!</string>
  <string name="must_be_in_group">You should be in group</string>
  <string name="kicked_users">Kicked %1$d users!</string>
  <string name="cant_kick_anybody">You can\'t kick anybody in this group!</string>
  <string name="cant_kick_not_in_group">You can\'t kick people if you are not a part of the group!</string>
  <string name="my_steps_today">My steps\ntoday</string>
  <string name="total_assess_kicked">Asses\nKicked</string>
  <string name="total_group_steps">Total users\nin group</string>
  <string name="wake_them_up">Type to wake them up…</string>
  <string name="steps">Steps</string>
  <string name="add_members">Add Members</string>
  <string name="search_member">Search to add new members</string>
  <string name="added">Added</string>
  <string name="my_stats">My Stats</string>
  <string name="warming_up_caps">Warming up</string>
  <string name="stats_day_template">Day %1$d</string>
  <string name="last_day">Last Day</string>
  <string name="pref_language_options">Language</string>
  <string name="pref_language">Language</string>
  <string name="products_for_true_walkers">Products for true walkers</string>
  <string name="buy_for">Buy for</string>
  <string name="buy_now_for">Buy now for </string>
  <string name="free_for">Free for 5 friends</string>
  <string name="sugarman_cap">Sugarman cap</string>
  <string name="phone_holder">Phone holder</string>
  <string name="sugarman_comics">Sugarman comics</string>
  <string name="purchase_details">Purchase details</string>
  <string name="total_price">Total price</string>
  <string name="delivery_information">Delivery information</string>
  <string name="country">Country</string>
  <string name="city">City</string>
  <string name="street">Street</string>
  <string name="zip_code">ZIP Code</string>
  <string name="full_name">Full name</string>
  <string name="all_fields_required">All fields required</string>
  <string name="invite_friends_and_get_gift">Invite friends to the MYB\nand get this product for FREE after\n5 installations</string>
  <string name="already_installed_by_your_link">Already installed by your link</string>
  <string name="your_phone_number">Your phone number</string>
  <string name="please_confirm">Please confirm your country code and enter\nyour phone number</string>
  <string name="we_have_sent_you">We have sent you an SMS with a code\nto the number above</string>
  <string name="to_complete">To complete your phone number verification\nplease enter the 5-digit activation code</string>
  <string name="social_network">SOCIAL NETWORKS</string>
  <string name="change_profile_photo">Change profile photo</string>
  <string name="profile_settings">Profile Settings</string>
  <string name="not_logged_in">Not logged in</string>
  <string name="log_in_to_vk">Log in to VK?</string>
  <string name="log_in_to_fb">Log in to Facebook?</string>
  <string name="the_email_is_not_valid">The e-mail you entered is not valid</string>
  <string name="price_total">Price total</string>
  <string name="address">Address</string>
  <string name="phone">Phone</string>
  <string name="buy_now">Buy now</string>
</resources>